--- a/_site.yml
+++ b/_site.yml
@@ -37,6 +37,8 @@ navbar:
           href: 06_b_variables_mutate_summarise_homework.html
         - text: "Dplyr 3 - funkce mutate, summarise atd."
           href: 06_d_variables_mutate_summarise_homework.html
+        - text: "Forcats - práce s faktory"
+          href: 07_factors_homework.html
     - text: "Atestace"
       href: atestation.html
     - text: "Data"
